Fixed alignment of max button on smite dialog

--- a/src/modules/dashboard/components/Dialogs/SmiteDialog/SmiteDialogForm.css
+++ b/src/modules/dashboard/components/Dialogs/SmiteDialog/SmiteDialogForm.css
@@ -27,6 +27,7 @@
 }
 
 .inputContainer button {
+  right: auto;
   left: -6px;
 }
 
